--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
                 <a href="#contact" class="nav__link scroll-link">Contact</a>
               </li>
               <li class="nav__item">
-                <a href="cart.html" class="nav__link scroll-link">Cart</a>
+                <a href="cart.html" class="nav__link">Cart</a>
               </li>
               <li class="nav__item">
-                <a href="product.html" class="nav__link scroll-link">Product</a>
+                <a href="product.html" class="nav__link">Product</a>
               </li>
             </ul>
           </div>
